<resources>
    <string name="app_name">Ingatlan</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="email_c_m">Email cím</string>
    <string name="m_gse">Mégse</string>
    <string name="jelsz_jra">Jelszó újra</string>
    <string name="property_image">Property Image</string>
    <string name="property_details">Property Details</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="square_footage">Square Footage</string>
    <string name="square_footage_format">%.1f sqft</string>
    <string name="no_items_available">Nincsenek elérhető ingatlanok</string>
    <string name="empty_list_description">Üres lista</string>
    <string name="property_list_description">Ingatlanok listája</string>
    <string name="sort_by">Rendezés</string>
    <string-array name="sorting_options">
        <item>Ár szerint növekvő</item>
        <item>Ár szerint csökkenő</item>
        <item>Város szerint</item>
    </string-array>
</resources>